fix: 数据库配置，脚本配置