@@ -1,4 +1,15 @@
 #!/bin/sh
+
+#/**
+# * 使用自己的镜像启动自己的应用程序测试后，再咨询，
+# * 启动方式，使用镜像id创建ecs，然后讲application.zip拷贝到/tmp目录，
+# * 将start.sh拷贝到 ～ 然后使用 start.sh default完成部署和首次运行，
+# * 以及start.sh run来运行，完成后再提交，如果没有测试，需要自己测试，
+# * 测试完成后，如果还是0分，再at我。另外需要考虑程序的启动时间，可以再
+# * start.sh的run中进行sleep比如30秒或者check一下是否启动
+# *
+# */
+
 # shellcheck disable=SC2039
 if [[ $# != 1 ]]; then
    echo "USAGE $0 option<deploy | run>"
@@ -7,7 +18,8 @@ fi
 option=$1
 echo $1
 zip_file_name="application.zip"
-app_file_name="chat_demo"
+app_file_name="im-datastore-0.0.1-SNAPSHOT.jar"
+binDir="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
 # shellcheck disable=SC2120
 # shellcheck disable=SC2112
@@ -23,10 +35,16 @@ function deploy() {
 # shellcheck disable=SC2112
 function run() {
   cd ~ || exit
-  # 请务必使用后台运行的方式
-  ./"${app_file_name}" &
+  run
 }
-
+start() {
+    echo "start ${moduleName}..."
+    nohup java -XX:+UseConcMarkSweepGC \
+    -Xms2048m -Xmx2048m -XX:+PrintGCDateStamps \
+    -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -Duser.timezone=Asia/Shanghai \
+    -XX:+HeapDumpOnOutOfMemoryError -jar ${binDir}/${app_file_name} \
+    --isJar=true > /dev/null 2>&1 &
+}
 # shellcheck disable=SC2166
 if [ "$option" == 'deploy' ]
 then
